change access modifiers in ticket machine
Signed-off-by: Mineshafter61 <yuhang.061@gmail.com>